--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,4 +27,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/uauthx:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/uauthx:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/uauthx:${{ github.sha }}
