--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
